--- a/src/components/icon/icon.scss
+++ b/src/components/icon/icon.scss
@@ -136,6 +136,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.70));
 }
 
 .badge-icon:after {
